--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
     "react": "^17.0.2",
     "typescript": "^4.2.4"
   },
