added repository to package.json

--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
   "files": [
     "./build/*"
   ],
-  "module": "./build/index.js"
+  "module": "./build/index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/juliuswaldmann/parallax-react.git"
+}
 }
