--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "customscroll"
   ],
   "author": "juliuswaldmann",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
