--- a/package.json
+++ b/package.json
@@ -15,18 +15,19 @@
   ],
   "author": "juliuswaldmann",
   "license": "MIT",
-  "devDependencies": {
+  "dependencies": {
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
     "react": "^17.0.2",
     "typescript": "^4.2.4"
   },
   "files": [
-    "./build/*"
+    "build/*"
   ],
   "module": "./build/index.js",
+  "main": "./build/index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/juliuswaldmann/parallax-react.git"
-}
+  }
 }
