--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   ],
   "author": "juliuswaldmann",
   "license": "MIT",
+  "devDependencies": {
+    "@types/react": ">=17.0.3",
+    "@types/react-dom": ">=17.0.3",
+    "typescript": ">=4.2.4"
+  },
   "dependencies": {
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.3",
-    "react": "^17.0.2",
-    "typescript": "^4.2.4"
+    "react": ">=17.0.2"
   },
   "files": [
     "build/*"
