--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.9",
   "description": "A libary for managing scroll speed of different components in react.",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "copy-files": "copyfiles -u 1 src/**/*.css build/",
+    "build": "tsc && npm run copy-files"
   },
   "keywords": [
     "parallax",
@@ -18,7 +19,9 @@
   "devDependencies": {
     "@types/react": ">=17.0.0",
     "@types/react-dom": ">=17.0.0",
-    "typescript": ">=4.2.0"
+    "copyfiles": "^2.4.1",
+    "typescript": ">=4.2.0",
+    "typescript-plugin-css-modules": "^3.2.0"
   },
   "dependencies": {
     "react": ">=17.0.2"
